manifests/gitea/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 32222
    targetPort: 22
    nodePort: 32222
    protocol: TCP
    name: ssh
  selector:
    app: gitea
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: smtp
        image: tianon/exim4
      - name: gitea
        image: gitea/gitea
        imagePullPolicy: Always
        ports:
        - containerPort: 22
        - containerPort: 3000
        volumeMounts:
        - name: gitea-data
          mountPath: /data
      volumes:
      - name: gitea-data
        hostPath:
          path: /zpool/k8s/platform/git
