manifests/gitea/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - git.tsar.su
    secretName: git-tls
  rules:
  - host: git.tsar.su
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: 80
